frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lmyc-frontend-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: lubricentromyc.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lmyc-frontend-service
                port:
                  number: 3000
